fix: 将下载链接格式从XML改为json

--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -2,50 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "\n",
     "appSecret = \"94aba54af9065f71de72f5508f1cd42e\"\n",
     "appKey = \"84956560bc028eb7\"\n",
     "appkey = \"c1b107428d337928\"\n",
     "appsec = \"ea85624dfcf12d7cc7b2b3a94fac1f2c\"\n",
     "dlappKey = \"f3bb208b3d081dc8\"\n",
-    "dlappSecret = \"1c15888dc316e05a15fdd0a02ed6584f\""
+    "dlappSecret = \"1c15888dc316e05a15fdd0a02ed6584f\"\n",
+    "进击=24629\n",
+    "风平=441"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://cn-bj2-cc-v-04.acgvideo.com/upgcxcode/71/12/301271/301271-1-15.flv?expires=1538947800&platform=pc&ssig=hlZefOdyZLpvH5TXc9lGiA&oi=2093829167&nfa=7VMUDqBQpI8VGBbhQ1faUQ==&dynamic=1&hfa=2039038672&hfb=Yjk5ZmZjM2M1YzY4ZjAwYTMzMTIzYmIyNWY4ODJkNWI=&trid=fa0eb1cb12a643f9ba89bd1951b2ddff&nfc=1'"
-      ]
-     },
-     "execution_count": 302,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import requests\n",
+    "def list2Cid(list):\n",
+    "    return list['result']['episodes'][-1]['cid']\n",
     "def seasonId2List(season_id):\n",
     "    url= \"https://bangumi.bilibili.com/view/web_api/season\"\n",
     "    params={'season_id':season_id}\n",
     "    return requests.get(url,params).json()\n",
-    "def seasonId2cid(season_id):\n",
-    "    return seasonId2List(season_id)\n",
-    "def epId2List(ep_id):\n",
+    "def epId2SeasonId(ep_id):\n",
     "    import re\n",
     "    url= \"https://www.bilibili.com/bangumi/play/ep\" + str(ep_id)\n",
     "    r=requests.get(url)\n",
     "    m = re.search(r'(?<=ss)\\d+', r.text)\n",
-    "    return seasonId2List(m.group(0))\n",
+    "    return m.group(0)\n",
     "def epId2cid(ep_id):\n",
-    "    return epId2List(ep_id)['result']['episodes'][-1]['cid']\n",
+    "    return list2Cid(seasonId2List(epId2SeasonId(ep_id)))\n",
     "def aid2List(aid,page=1):\n",
     "    url=\"https://api.bilibili.com/view\"\n",
     "    params={'appkey':appKey,'id':aid,'page':page}\n",
@@ -53,12 +45,15 @@
     "def aid2cid(aid,page=1):\n",
     "    return aid2List(aid,page)['cid']\n",
     "def cid2DownUrl(cid,quality=80):\n",
+    "    import hashlib\n",
     "    url='https://bangumi.bilibili.com/player/web_api/v2/playurl'\n",
     "    params={}\n",
     "    params.update([['cid',cid],['otype','json'],['type',''],['module','bangumi'],['season_type','1'],['appkey',appKey]])\n",
     "    params['sign']=hashlib.md5(('&'.join([i+'='+str(params[i]) for i in sorted(params.keys())])+appSecret).encode()).hexdigest()\n",
     "    headers={'Referer':'https://www.bilibili.com/video/','User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:56.0) Gecko/20100101 Firefox/56.0'}\n",
-    "    headers['Client-IP']='59.125.39.5'\n",
+    "    headers['Client-IP']='59.152.193.24'\n",
+    "    headers['X-Forwarded-For']='59.152.193.24'\n",
+    "    headers['X-Requested-With']='XMLHttpRequest'\n",
     "    return requests.get(url,params=params,headers=headers).json()\n",
     "def getSign(params):\n",
     "    import time\n",
@@ -72,30 +67,49 @@
     "    params={'cid':cid,'otype':'json','appkey':appKey,'quality':3,'ts':int(time.time())}\n",
     "    params['sign']=hashlib.md5(('&'.join([i+'='+str(params[i]) for i in sorted(params.keys())])+appSecret).encode()).hexdigest()\n",
     "    url='https://interface.bilibili.com/playurl'\n",
-    "    return requests.get(url,params).json()\n",
-    "url=cid2DownUrl(58232206)['durl'][0]['url']\n",
-    "r = requests.get(url, headers={},stream=True)\n",
-    "with open('a.flv', 'wb') as f:\n",
-    "    for chunk in r.iter_content(chunk_size=1024): \n",
-    "        if chunk: # filter out keep-alive new chunks\n",
-    "            f.write(chunk)\n",
-    "cid2DownUrl(301271)['durl'][0]['url']"
+    "    return requests.get(url,params).json()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "299177119"
+       "0.0"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url=cid2DownUrl(list2Cid(seasonId2List(进击)))['durl'][0]['url']\n",
+    "# url='http://upos-hz-mirrorwcsu.acgvideo.com/upgcxcode/43/11/38521143/38521143-1-80.flv?e=ig8euxZM2rNcNbRghwdVhwdlhbKVhwdVhoNvNC8BqJIzNbfqXBvEqxTEto8BTrNvN0GvT90W5JZMkX_YN0MvXg8gNEVEuxTEto8i8o859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1541186141&gen=playurl&nbs=1&oi=2356152436&os=wcsu&platform=pc&trid=2649b8673cd54b5f961bda08de669fd0&uipk=5&upsig=a5627b0bc5a957aef96f026755be0280'\n",
+    "headers={'Referer':'https://www.bilibili.com/video/','User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:56.0) Gecko/20100101 Firefox/56.0'}\n",
+    "r = requests.get(url, headers=headers,stream=True)\n",
+    "int(r.headers['Content-Length'])/1024//1024\n",
+    "# with open('a.flv', 'wb') as f:\n",
+    "#     for chunk in r.iter_content(chunk_size=1024): \n",
+    "#         if chunk: # filter out keep-alive new chunks\n",
+    "#             f.write(chunk)\n",
+    "#cid2DownUrl(301271)['durl'][0]['url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1513s\n"
+     ]
     }
    ],
    "source": [
@@ -103,49 +117,101 @@
     "          'Accept': '*/*','Accept-Language': 'en-US,en;q=0.5','Accept-Encoding': 'gzip, deflate, br',\n",
     "         'Range': 'bytes=0-','Referer': 'https://www.bilibili.com/video/av14543079/','Origin': 'https://www.bilibili.com','Connection': 'keep-alive'}\n",
     "headers={'Referer':'https://www.bilibili.com/video/','User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:56.0) Gecko/20100101 Firefox/56.0'}\n",
-    "url=cid2DownUrl(58232206)['durl'][0]['url']\n",
-    "r = requests.get(url, headers=headers,stream=True)\n",
-    "int(r.headers['content-length'])"
+    "headers['Client-IP']='59.125.39.5'\n",
+    "print('{:.0f}s'.format(cid2DownUrl(list2Cid(seasonId2List(1071)))['durl'][0]['length']/1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{:.0f}s'.format(cid2DownUrl(list2Cid(seasonId2List(进击)))['durl'][0]['length']/1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'code': -403, 'message': '权限不足'}"
+       "{'code': -404, 'message': '结果为空或者已被删除'}"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cid2DownUrl(58362745)#['durl'][0]['size']/1024"
+    "cid2DownUrl(38521143)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54273413"
+       "61573130"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "epId2cid(9713)"
+    "list2Cid(seasonId2List(25617))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accept_description': ['高清 720P', '流畅 360P'],\n",
+       " 'accept_format': 'hdmp4,mp4',\n",
+       " 'accept_quality': [48, 16],\n",
+       " 'bp': 0,\n",
+       " 'code': 0,\n",
+       " 'durl': [{'length': 15126,\n",
+       "   'order': 1,\n",
+       "   'size': 124627,\n",
+       "   'url': 'http://cn-zjwz4-dx-v-09.acgvideo.com/upgcxcode/43/69/8986943/8986943-1-16.mp4?expires=1541192700&platform=ios&ssig=uQRrBovVZESrWYpBa-ZMJQ&oi=3078818617&nfa=7VMUDqBQpI8VGBbhQ1faUQ==&dynamic=1&hfa=2045739811&hfb=ZWI2ODUxMTI1YmRhNTcxZjcwNTFjMTUwOTdkZTc0ZDM=&trid=ad4383a37d9a4b7797f807f4cfc192ed&nfc=1'}],\n",
+       " 'format': 'mp4',\n",
+       " 'from': 'local',\n",
+       " 'has_paid': False,\n",
+       " 'quality': 16,\n",
+       " 'result': 'suee',\n",
+       " 'seek_param': 'start',\n",
+       " 'seek_type': 'second',\n",
+       " 'timelength': 15126}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cid2DownUrl(list2Cid(seasonId2List(进击)))"
    ]
   },
   {
