--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -215,11 +215,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取Token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"hash\":\"7de3d6ebcb8a35c7\",\"key\":\"-----BEGIN PUBLIC KEY-----\\\\nMIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCdScM09sZJqFPX7bvmB2y6i08J\\\\nbHsa0v4THafPbJN9NoaZ9Djz1LmeLkVlmWx1DwgHVW+K7LVWT5FV3johacVRuV98\\\\n37+RNntEK6SE82MPcl7fA++dmW2cLlAjsIIkrX+aIvvSGCuUfcWpWFy3YVDqhuHr\\\\nNDjdNcaefJIQHMW+sQIDAQAB\\\\n-----END PUBLIC KEY-----\\\\n\"}'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "url= \"https://www.biliplus.com/login?act=getpubkey\"\n",
+    "r=requests.get(url)\n",
+    "r.text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url2=\"\""
+   ]
   }
  ],
  "metadata": {
