--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,20 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"hash\":\"7de3d6ebcb8a35c7\",\"key\":\"-----BEGIN PUBLIC KEY-----\\\\nMIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCdScM09sZJqFPX7bvmB2y6i08J\\\\nbHsa0v4THafPbJN9NoaZ9Djz1LmeLkVlmWx1DwgHVW+K7LVWT5FV3johacVRuV98\\\\n37+RNntEK6SE82MPcl7fA++dmW2cLlAjsIIkrX+aIvvSGCuUfcWpWFy3YVDqhuHr\\\\nNDjdNcaefJIQHMW+sQIDAQAB\\\\n-----END PUBLIC KEY-----\\\\n\"}'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "url= \"https://www.biliplus.com/login?act=getpubkey\"\n",
@@ -246,12 +235,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mode': 'video', 'part': 1, 'cid': 62984291, 'length': '023:40', 'data': [{'type': 'split', 'name': 'Standard FLV', 'parts': [{'length': '23:40 186.97MB', 'url': 'http://upos-hz-mirrorwcsu.acgvideo.com/upgcxcode/91/42/62984291/62984291-1-80.flv?e=ig8euxZM2rNcNbRghwdVhwdlhbKVhwdVhoNvNC8BqJIzNbfqXBvEuENvNCImNEVEua6m2jIxux0CkF6s2JZv5x0DQJZY2F8SkXKE9IB5QK==&deadline=1542393867&gen=playurl&nbs=1&oi=2356152436&os=wcsu&platform=flash&trid=c82111bf325648eb961bbaeae71c3b35&uipk=5&upsig=4068ab7b0741ac4cb6413534d5e0032a'}], 'info': '186.97MB<br>1920x1080@23.98 1104.35 kbps<br>882.02 / 188.23 kbps'}, {'type': 'split', 'name': 'Lowered FLV', 'parts': [{'length': '23:40 139.02MB', 'url': 'http://upos-hz-mirrorwcsu.acgvideo.com/upgcxcode/91/42/62984291/62984291-1-64.flv?e=ig8euxZM2rNcNbRghwdVhwdlhbKVhwdVhoNvNC8BqJIzNbfqXBvEuENvNCImNEVEua6m2jIxux0CkF6s2JZv5x0DQJZY2F8SkXKE9IB5QK==&deadline=1542393867&gen=playurl&nbs=1&oi=2356152436&os=wcsu&platform=flash&trid=8aa06628ff3d4075bed47a43c948ff96&uipk=5&upsig=98776481c9df75d968e75cc6700c7e60'}], 'info': '139.02MB<br>1280x720@23.98 821.13 kbps<br>605.40 / 188.23 kbps'}, {'type': 'split', 'name': 'SD FLV', 'parts': [{'length': '23:40 109.53MB', 'url': 'http://upos-hz-mirrorwcsu.acgvideo.com/upgcxcode/91/42/62984291/62984291-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhbKVhwdVhoNvNC8BqJIzNbfqXBvEuENvNCImNEVEua6m2jIxux0CkF6s2JZv5x0DQJZY2F8SkXKE9IB5QK==&deadline=1542393867&gen=playurl&nbs=1&oi=2356152436&os=wcsu&platform=flash&trid=70d00e36477443e980e637229f0b33c0&uipk=5&upsig=4ad328241a9cb2ac7623333d2f54d285'}], 'info': '109.53MB<br>852x480@23.98 646.94 kbps<br>435.28 / 188.23 kbps'}, {'type': 'single', 'name': 'SD MP4', 'url': 'http://upos-hz-mirrorwcsu.acgvideo.com/upgcxcode/91/42/62984291/62984291-1-16.mp4?e=ig8euxZM2rNcNbRghwdVhwdlhbKVhwdVhoNvNC8BqJIzNbfqXBvEuENvNCImNEVEua6m2jIxux0CkF6s2JZv5x0DQJZY2F8SkXKE9IB5QK==&deadline=1542393868&gen=playurl&nbs=1&oi=2356152436&os=wcsu&platform=flash&trid=ed21d19779e442aba6a334eaad7ef935&uipk=5&upsig=10ea50db15dd5f5df932fd2569ffbc40', 'info': '640x360 436.00 kbps<br>364.07 / 65.54 kbps'}], 'notInList': ['hdflv2'], 'expire': 0, 'warn': 'Recommmend using multi-thread downloader to download videos', 'storage': {'access': 2, 'cid': 62984291, 'type': [['mp4', '896.20MB']], 'canReport': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url='https://www.biliplus.com/api/geturl?av=5886528&page=1&bangumi=1'\n",
+    "import requests\n",
+    "def aid2DownUrl(aid,page,bangumi):\n",
+    "    url='https://www.biliplus.com/api/geturl'\n",
+    "    params={'bangumi':bangumi,'av':aid,'page':page}\n",
+    "    headers={}\n",
+    "    headers['cookie']='bp_user_id=d-zz-WOAiULcUN99E3tDMw; UsingLang=zh; UM_distinctid=166d59c83a8201-06ac2aa5e25896-4d045769-1fa400-166d59c83a9533; CNZZDATA1256846811=270910691-1541182090-https%253A%252F%252Fwww.biliplus.com%252F%7C1541182090; adfly_video_vaild=1542581413%2Cb4c3b44f; pushed_L2pzL2xhbmcuemguanM=171023013645; pushed_L3N0eWxlL2JpbGlwbHVzLm1pbi5jc3M=180127; pushed_L2pzL3RpbWVyLm1pbi5qcw=161222; pushed_L2pzL3RpbWVhZ28ubWluLmpz=225898f; pushed_L2pzL2JvdHRvbXNjcmlwdC5taW4uanM=180924; vipDueDate=0; pushed_L2pzL3NwLm1pbi5qcw=1710230136; pushed_L2pzL2Zhdi5taW4uanM=181010; freetoview=2; pushed_L2pzL2dldGFpZC5taW4uanM=1811121608; pushed_L2pzL3dpbi1kb3RzLm1pbi5qcw=161229; level=5; login=2; passlogin=1; mid=1381806; uname=Brainor; access_key=b824d04e8483972a35244b81a32d2cd9; face=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Fface%2F149806452d89f9eec87406c7354d977fac8cd983.jpg; expires=1544971143; secure_header=access_key%2Cmid%2Clevel%2Csecurev2_time; securev2_time=1542379148; securev2=40b567b5; visiturl=%2Fapi%2Fdo.php%3Fsource%3Dbilibili%26act%3Dsearch%26o%3Ddefault%26n%3D20%26p%3D1%26word%3D%25E4%25BA%25A7%25E5%25AD%2590%25E6%2595%2591%25E4%25B8%2596%25E5%25BD%2595; _ga=GA1.2.1111774395.1539370612; _gid=GA1.2.666122244.1542379065'\n",
+    "    headers['cookie']='bp_user_id=d-zz-WOAiULcUN99E3tDMw; UM_distinctid=166d59c83a8201-06ac2aa5e25896-4d045769-1fa400-166d59c83a9533; CNZZDATA1256846811=270910691-1541182090-https%253A%252F%252Fwww.biliplus.com%252F%7C1541182090; adfly_video_vaild=1542581413%2Cb4c3b44f; pushed_L2pzL2xhbmcuemguanM=171023013645; pushed_L3N0eWxlL2JpbGlwbHVzLm1pbi5jc3M=180127; pushed_L2pzL3RpbWVyLm1pbi5qcw=161222; pushed_L2pzL3RpbWVhZ28ubWluLmpz=225898f; pushed_L2pzL2JvdHRvbXNjcmlwdC5taW4uanM=180924; vipDueDate=0; pushed_L2pzL3NwLm1pbi5qcw=1710230136; pushed_L2pzL2Zhdi5taW4uanM=181010; freetoview=2; pushed_L2pzL2dldGFpZC5taW4uanM=1811121608; pushed_L2pzL3dpbi1kb3RzLm1pbi5qcw=161229; level=5; login=2; passlogin=1; mid=1381806; uname=Brainor; access_key=b824d04e8483972a35244b81a32d2cd9; face=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Fface%2F149806452d89f9eec87406c7354d977fac8cd983.jpg; expires=1544971143; secure_header=access_key%2Cmid%2Clevel%2Csecurev2_time; securev2_time=1542379148; securev2=40b567b5; visiturl=%2Fapi%2Fdo.php%3Fsource%3Dbilibili%26act%3Dsearch%26o%3Ddefault%26n%3D20%26p%3D1%26word%3D%25E4%25BA%25A7%25E5%25AD%2590%25E6%2595%2591%25E4%25B8%2596%25E5%25BD%2595; _ga=GA1.2.1111774395.1539370612; _gid=GA1.2.666122244.1542379065'\n",
+    "    print(requests.get(url,params=params,headers=headers).json())\n",
+    "aid2DownUrl(35886528,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59312460"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2Cid(seasonId2List(24629))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "url2=\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -270,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
