fix: 美国服务器被墙了.2 note: 必须关闭MIUI的迅雷下载引擎

--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -260,24 +260,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BiliPlus"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url='https://www.biliplus.com/BPplayurl.php?cid=63355113&type=mp4&otype=json'\n",
+    "# url2=requests.get(url).json()['durl'][0]['url'].replace('us.biliplus-vid.top','sg.biliplus-vid.top')\n",
+    "url2='https://us.biliplus-vid.top/file/16190fd10ddd29fa321a04e8d34f9dc0/1542984989/2093829167/1K4loQ4lHTyS1vCns7mvGXIy8Ols1Dm1K/videoplayback.mp4'.replace('us.biliplus-vid.top','sg.biliplus-vid.top')\n",
+    "headers={}\n",
+    "# headers['referer']='https://www.biliplus.com/api/video_playurl?cid=63355113&type=mp4'\n",
+    "# headers['user-agent']='Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36 SE 2.X MetaSr 1.0'\n",
+    "r=requests.get(url2,headers=headers)\n",
+    "with open('a.flv', 'wb') as f:\n",
+    "    for chunk in r.iter_content(chunk_size=1024): \n",
+    "        if chunk: # filter out keep-alive new chunks\n",
+    "            f.write(chunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "59312460"
+       "{'code': 10004, 'result': 'error', 'message': 'Video is hidden.'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list2Cid(seasonId2List(24629))"
+    "r1=requests.get(url).json()\n",
+    "r1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
