Update: 1. 自动重启B站客户端 2. 学了一下SQL语言(map, filter) 3. 设置内添加了一项 TODO: 自动关闭SSR 看看能不能直接从B站下资源?

--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -288,31 +288,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<RequestsCookieJar[<Cookie bp_user_id=v2A0gjSZ1bytJJ1Z2ynUoQ for .biliplus.com/>, <Cookie freetoview=3 for .biliplus.com/>, <Cookie login=1 for .biliplus.com/>, <Cookie mid=visitor_7ccd4c2f for .biliplus.com/>, <Cookie passlogin=0 for .biliplus.com/>, <Cookie uname=%E6%B8%B8%E5%AE%A27ccd4c2f for .biliplus.com/>]>\n",
+      "<RequestsCookieJar[<Cookie access_key=65ee1460b8adaa7b149033e614fe70c1 for .biliplus.com/>, <Cookie bp_user_id=v2A0gjSZ1bytJJ1Z2ynUoQ for .biliplus.com/>, <Cookie face=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Fface%2F149806452d89f9eec87406c7354d977fac8cd983.jpg for .biliplus.com/>, <Cookie level=5 for .biliplus.com/>, <Cookie login=2 for .biliplus.com/>, <Cookie mid=1381806 for .biliplus.com/>, <Cookie passlogin=1 for .biliplus.com/>, <Cookie secure_header=access_key%2Cmid%2Clevel%2Csecurev2_time for .biliplus.com/>, <Cookie securev2=dd7852da for .biliplus.com/>, <Cookie securev2_time=1544620018 for .biliplus.com/>, <Cookie uname=Brainor for .biliplus.com/>]>\n",
+      "login_success({\"code\":0,\"visiturl\":\"\"});\n"
+     ]
+    }
+   ],
+   "source": [
+    "#这部分是获得BiliPlus授权\n",
+    "import requests\n",
+    "def to_para(plain):\n",
+    "    from Crypto.Cipher import PKCS1_v1_5 as Cipher_pkcs1_v1_5\n",
+    "    import base64\n",
+    "    from Crypto.PublicKey import RSA\n",
+    "    url='https://www.biliplus.com/login'\n",
+    "    pub_key=requests.get(url,params={'act':'getpubkey'}).json()\n",
+    "    rsa_key = RSA.importKey(pub_key['key'])\n",
+    "    cipher = Cipher_pkcs1_v1_5.new(rsa_key)\n",
+    "    cipher_text = base64.b64encode(cipher.encrypt((pub_key['hash']+plain).encode()))  # 通过生成的对象加密message明文，注意，在python3中加密的数据必须是bytes类型的数据，不能是str类型的数据\n",
+    "    return(cipher_text.decode())\n",
+    "url='https://www.biliplus.com/login'\n",
+    "res=requests.post(url,params={'act':'login'},data={'uid':'18910958663','pwd':to_para('oudanyi6456')})\n",
+    "print(res.cookies)\n",
+    "res=requests.get(url,params={'act':'savekey',**res.json()})\n",
+    "print(res.cookies)\n",
+    "print(res.text)\n",
+    "# to_para('ca775807bff9cf1eoudanyi6456')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'code': 10004, 'result': 'error', 'message': 'Video is hidden.'}"
+       "{'44': 3, '1': 4}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r1=requests.get(url).json()\n",
-    "r1"
+    "a={'1':4}\n",
+    "{'44':3,**a}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
