UPDATE: 增加B站Android官方API, 具体参考python\BiliHelper.ipynb TODO: 看看能不能直接从B站下资源?

--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "appSecret = \"94aba54af9065f71de72f5508f1cd42e\"\n",
     "appKey = \"84956560bc028eb7\"\n",
     "appkey = \"c1b107428d337928\"\n",
@@ -122,103 +121,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15s\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('{:.0f}s'.format(cid2DownUrl(list2Cid(seasonId2List(进击)))['durl'][0]['length']/1000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'code': -404, 'message': '结果为空或者已被删除'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cid2DownUrl(38521143)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "61573130"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list2Cid(seasonId2List(25617))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accept_description': ['高清 720P', '流畅 360P'],\n",
-       " 'accept_format': 'hdmp4,mp4',\n",
-       " 'accept_quality': [48, 16],\n",
-       " 'bp': 0,\n",
-       " 'code': 0,\n",
-       " 'durl': [{'length': 15126,\n",
-       "   'order': 1,\n",
-       "   'size': 124627,\n",
-       "   'url': 'http://cn-zjwz4-dx-v-09.acgvideo.com/upgcxcode/43/69/8986943/8986943-1-16.mp4?expires=1541192700&platform=ios&ssig=uQRrBovVZESrWYpBa-ZMJQ&oi=3078818617&nfa=7VMUDqBQpI8VGBbhQ1faUQ==&dynamic=1&hfa=2045739811&hfb=ZWI2ODUxMTI1YmRhNTcxZjcwNTFjMTUwOTdkZTc0ZDM=&trid=ad4383a37d9a4b7797f807f4cfc192ed&nfc=1'}],\n",
-       " 'format': 'mp4',\n",
-       " 'from': 'local',\n",
-       " 'has_paid': False,\n",
-       " 'quality': 16,\n",
-       " 'result': 'suee',\n",
-       " 'seek_param': 'start',\n",
-       " 'seek_type': 'second',\n",
-       " 'timelength': 15126}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cid2DownUrl(list2Cid(seasonId2List(进击)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "获取Token"
+    "## 获取Token"
    ]
   },
   {
@@ -263,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BiliPlus"
+    "# BiliPlus"
    ]
   },
   {
@@ -324,24 +230,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# B站登陆API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url='https://passport.bilibili.com/login'\n",
+    "def encryptPassword(password):\n",
+    "    from Crypto.Cipher import PKCS1_v1_5 as Cipher_pkcs1_v1_5\n",
+    "    import base64\n",
+    "    from Crypto.PublicKey import RSA\n",
+    "    pub_key=requests.get(url,params={'act':'getkey'}).json()\n",
+    "    rsa_key = RSA.importKey(pub_key['key'])\n",
+    "    cipher = Cipher_pkcs1_v1_5.new(rsa_key)\n",
+    "    cipher_text = base64.b64encode(cipher.encrypt((pub_key['hash']+password).encode()))  # 通过生成的对象加密message明文，注意，在python3中加密的数据必须是bytes类型的数据，不能是str类型的数据\n",
+    "    return(cipher_text.decode())\n",
+    "def capcha():\n",
+    "    data=requests.get(url[:-5]+'qrcode/getLoginUrl').json()['data']\n",
+    "    data2=requests.post(url[:-5]+'qrcode/getLoginInfo',data={'oauthKey':data['oauthKey'],'gourl':url[:-5]+'account/security#/home'})\n",
+    "    print(data2)\n",
+    "res=requests.post(url+'/web/login/v2',data={'username':'brainor','password':encryptPassword('oudanyi6456'),'keep':True,'key':'','goUrl':url[:-5]+'account/security#/home','challenge':'','validate':'','seccode':''})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=requests.get(url[:-5]+'qrcode/getLoginUrl')\n",
+    "data2=requests.post(url[:-5]+'qrcode/getLoginInfo',data={'oauthKey':data.json()['data']['oauthKey'],'gourl':url[:-5]+'account/security#/home'})\n",
+    "requests.get(url[:-5]+'web/captcha/combine?plat=2').text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "B站Android API"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Device: android\n",
+    "Description: 普通版\n",
+    "AppKey: 1d8b6e7d45233436\n",
+    "SecretKey: 560c52ccd288fed045859ed18bffd973\n",
+    "\n",
+    "Device: android_i\n",
+    "Description: 国际版\n",
+    "AppKey: bb3101000e232e27\n",
+    "SecretKey: 36efcfed79309338ced0380abd824ac1\n",
+    "\n",
+    "Device: android_b\n",
+    "Description: 概念版\n",
+    "AppKey: 07da50c9a0bf829f\n",
+    "SecretKey: 25bdede4e1581c836cab73a48790ca6e\n",
+    "\n",
+    "Device: android_tv\n",
+    "Description: 电视版\n",
+    "AppKey: 4409e2ce8ffd12b8\n",
+    "SecretKey: 59b43e04ad6965f34319062b478f83dd\n",
+    "\n",
+    "Device: biliLink\n",
+    "Description: 直播\n",
+    "AppKey: 37207f2beaebf8d7\n",
+    "SecretKey: e988e794d4d4b6dd43bc0e89d6e90c43\n",
+    "\n",
+    "视频\n",
+    "AppKey: iVGUTjsxvpLeuDCf\n",
+    "SecretKey: aHRmhWMLkdeMuILqORnYZocwMBpMEOdt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"ts\":1546418225,\"code\":0,\"data\":{\"status\":0,\"token_info\":{\"mid\":1381806,\"access_token\":\"de6c0d7057f6783d0c081f87aab2b711\",\"refresh_token\":\"5783be144b9a08ea14e82087bc544d11\",\"expires_in\":2592000},\"cookie_info\":{\"cookies\":[{\"name\":\"bili_jct\",\"value\":\"eca499cadf661f9c8e72566326b21ad4\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"DedeUserID\",\"value\":\"1381806\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"DedeUserID__ckMd5\",\"value\":\"357668196c082654\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"sid\",\"value\":\"m3mqmg7t\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"SESSDATA\",\"value\":\"36d625a6%2C1549010225%2C4f9a5611\",\"http_only\":1,\"expires\":1549010225}],\"domains\":[\".bilibili.com\",\".biligame.com\",\".im9.com\",\".bigfunapp.cn\"]},\"sso\":[\"https://passport.bilibili.com/api/v2/sso\",\"https://passport.biligame.com/api/v2/sso\",\"https://passport.im9.com/api/v2/sso\",\"https://passport.bigfunapp.cn/api/v2/sso\"]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import hashlib\n",
+    "import time\n",
+    "from urllib import parse\n",
+    "#登陆API\n",
+    "url_login='https://passport.bilibili.com/api/'\n",
+    "AppKey='1d8b6e7d45233436'\n",
+    "SecretKey='560c52ccd288fed045859ed18bffd973'\n",
+    "defaultParam={'build':5350000,'mobi_app':'android','platform':'android'}\n",
+    "cookies={}\n",
+    "def getSign(params):\n",
+    "    params.update(appkey=AppKey)\n",
+    "#     params={k: params[k] for k in sorted(params)}\n",
+    "    sign=hashlib.md5((parse.urlencode(sorted(params.items()))+SecretKey).encode()).hexdigest()\n",
+    "    return {**params,'sign':sign}\n",
+    "def encrypt_pw(pw,headers):\n",
+    "    from Crypto.Cipher import PKCS1_v1_5 as Cipher_pkcs1_v1_5\n",
+    "    import base64\n",
+    "    from Crypto.PublicKey import RSA\n",
+    "    req_getKey=requests.post(url_login+'oauth2/getKey',data=getSign(defaultParam))\n",
+    "    cookies['sid']=req_getKey.cookies['sid']\n",
+    "    rsa_key = RSA.importKey(req_getKey.json()['data']['key'])\n",
+    "    cipher = Cipher_pkcs1_v1_5.new(rsa_key)\n",
+    "    cipher_text = base64.b64encode(cipher.encrypt((req_getKey.json()['data']['hash']+pw).encode()))  # 通过生成的对象加密message明文，注意，在python3中加密的数据必须是bytes类型的数据，不能是str类型的数据\n",
+    "    return(cipher_text.decode())\n",
+    "\n",
+    "res=requests.post(url_login+'v3/oauth2/login',\n",
+    "                  data=getSign({'appkey':AppKey,'username':'18910958663',**defaultParam,'password':encrypt_pw('oudanyi6456',cookies),'ts':int(time.time())}),\n",
+    "                  headers={'Display-ID': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc-1545829757','Buvid': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc','User-Agent': 'Mozilla/5.0 BiliDroid/5.35.0 (bbcallen@gmail.com)','Device-ID': 'RSYQJEYnEiBDekh6BjQGNAZkVDUGYwBlUS1RZ1FpC2oMPAk'},\n",
+    "                  cookies=cookies)\n",
+    "print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'44': 3, '1': 4}"
+       "{'accept_format': 'hdflv2,flv,flv720,flv480,mp4',\n",
+       " 'code': 0,\n",
+       " 'durl': [{'size': 100477741,\n",
+       "   'ahead': 'EZA=',\n",
+       "   'length': 1473171,\n",
+       "   'vhead': 'AWQAH//hABhnZAAfrNnA2D3n4QAAAwPpAAC7gA8YMZ4BAAVo6bssiw==',\n",
+       "   'backup_url': ['http://upos-hz-mirrorks3u.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546425971&gen=playurl&nbs=1&oi=2093829167&os=ks3u&platform=android&trid=0cf7fec32b324d2786d4abb189d059b5&uipk=5&upsig=63517ec7795aa8fc5818d3ef1ac85a97',\n",
+       "    'http://upos-hz-mirrorcos.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?um_deadline=1546425971&platform=android&rate=1200000&oi=2093829167&um_sign=9e87f2ebef917cdf22557a288424a8ee&gen=playurl&os=cos&trid=0cf7fec32b324d2786d4abb189d059b5'],\n",
+       "   'url': 'http://124.202.167.12/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546425971&gen=playurl&nbs=1&oi=2093829167&os=acache&platform=android&trid=0cf7fec32b324d2786d4abb189d059b5&uipk=5&upsig=543a9a839e6564aa229633da47d4caa6',\n",
+       "   'order': 1}],\n",
+       " 'seek_param': 'start',\n",
+       " 'format': 'flv480',\n",
+       " 'fnval': 0,\n",
+       " 'video_project': True,\n",
+       " 'fnver': 0,\n",
+       " 'accept_quality': [112, 80, 64, 32, 16],\n",
+       " 'bp': 0,\n",
+       " 'quality': 32,\n",
+       " 'timelength': 1473171,\n",
+       " 'result': 'suee',\n",
+       " 'seek_type': 'offset',\n",
+       " 'has_paid': True,\n",
+       " 'vip_type': 2,\n",
+       " 'vip_status': 1,\n",
+       " 'from': 'local',\n",
+       " 'video_codecid': 7,\n",
+       " 'accept_description': ['高清 1080P+',\n",
+       "  '高清 1080P',\n",
+       "  '高清 720P',\n",
+       "  '清晰 480P',\n",
+       "  '流畅 360P'],\n",
+       " 'status': 13}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a={'1':4}\n",
-    "{'44':3,**a}"
+    "url_down='https://api.bilibili.com/pgc/player/api/playurl'\n",
+    "params_video={'aid':35822946,'cid':68495959}\n",
+    "params_video={\"aid\":31861445,\"cid\":55724249}#港台\n",
+    "params_video={'aid':39564264,'cid':69511049}#会员\n",
+    "params_user={'mid':1381806,'access_key':'565517dc877bcceae69718005cdebec1'}#我的\n",
+    "params_user={'mid':17333796,'access_key':'9b278f3465ef1ade1a23bcdbe8560d11'}#会员\n",
+    "params={'appKey':AppKey,**defaultParam,'buvid':'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc',\n",
+    "       'expire':1548421792,'fnval':0,'fnver':0,'module':'bangumi','npcybs':1,'otype':'json','qn':32,'ts':1546410215,\n",
+    "       **params_video,**params_user}\n",
+    "requests.get(url_down,params=getSign(params)).json()"
    ]
   },
   {
@@ -368,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
